[gd_scene load_steps=14 format=3 uid="uid://f8mp43vqb13f"]

[ext_resource type="Script" uid="uid://dnayske5ek28m" path="res://scripts/player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://fg0xg2wcui3q" path="res://scenes/asset/flashlight.tscn" id="2_onrkg"]
[ext_resource type="Script" uid="uid://ci7kfw5q5qn2k" path="res://scripts/enemy_counter.gd" id="3_i3pqv"]
[ext_resource type="PackedScene" uid="uid://dofngbvrqwqni" path="res://scenes/other/health_component.tscn" id="3_sweqy"]
[ext_resource type="Script" uid="uid://xws3v0ou7h4d" path="res://scripts/sanity_bar.gd" id="4_2hs0m"]
[ext_resource type="FontFile" uid="uid://18ohqxx0orng" path="res://assets/fonts/static/Roboto-Light.ttf" id="5_ksla3"]
[ext_resource type="AudioStream" uid="uid://drx8tsfyjehx" path="res://assets/sfx/Audio/footstep02.ogg" id="6_2hs0m"]
[ext_resource type="PackedScene" uid="uid://bt8isq1pq1xna" path="res://scenes/other/sound_component.tscn" id="6_bee8u"]
[ext_resource type="AudioStream" uid="uid://cgpo6tvpujy6b" path="res://assets/sfx/player/dash.wav" id="7_j8jve"]
[ext_resource type="Script" uid="uid://br1ffti3jh1ai" path="res://scripts/currency_counter.gd" id="7_lo118"]
[ext_resource type="AudioStream" uid="uid://dx2nd6acpg2oh" path="res://assets/sfx/enemy/land.wav" id="8_k4nkw"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh265"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_4flbx"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("health_component", "walk_sound_component", "dash_sound_component", "land_sound_component", "jump_sound_component")]
collision_layer = 4
floor_max_angle = 1.0472
script = ExtResource("1_4flbx")
health_component = NodePath("HealthComponent")
walk_sound_component = NodePath("WalkSoundComponent")
dash_sound_component = NodePath("DashSoundComponent")
land_sound_component = NodePath("LandSoundComponent")
jump_sound_component = NodePath("JumpSoundComponent")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.05135, 0, 0, 0, 1.05135, 0, 0, 0, 1.05135, 0, 0, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_sh265")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_4flbx")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.636829, 0.00576949)
cull_mask = 1048573
current = true

[node name="Flashlight" parent="Head/Camera3D" instance=ExtResource("2_onrkg")]
transform = Transform3D(-3.0598e-09, 0, 0.07, 0, 0.07, 0, -0.07, 0, -3.0598e-09, 0.645148, -0.425091, -0.551973)
damage_per_second = 200.0

[node name="PlayerHitbox" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerHitbox"]
shape = SubResource("ConvexPolygonShape3D_4flbx")

[node name="HealthComponent" parent="." instance=ExtResource("3_sweqy")]

[node name="SanityBar" type="ProgressBar" parent="."]
offset_left = 47.0
offset_top = 45.0
offset_right = 317.0
offset_bottom = 85.0
size_flags_horizontal = 0
value = 100.0
show_percentage = false
script = ExtResource("4_2hs0m")
invincible_color = Color(2.00392, 0, 0, 1)
normal_color = Color(0.266667, 0.556863, 0.192157, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="SanityBar"]
layout_mode = 0
offset_top = -42.0
offset_right = 269.0
offset_bottom = -2.0
theme_override_fonts/normal_font = ExtResource("5_ksla3")
text = "Sanity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DashCooldownBar" type="ProgressBar" parent="."]
offset_left = 47.0
offset_top = 127.0
offset_right = 317.0
offset_bottom = 167.0
size_flags_horizontal = 0
value = 100.0
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="DashCooldownBar"]
layout_mode = 0
offset_top = -42.0
offset_right = 269.0
offset_bottom = -2.0
theme_override_fonts/normal_font = ExtResource("5_ksla3")
text = "Dash"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyCounter" type="RichTextLabel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -289.0
offset_top = 5.0
offset_bottom = 45.0
grow_horizontal = 0
theme_override_fonts/normal_font = ExtResource("5_ksla3")
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_i3pqv")

[node name="CurrencyCounter" type="RichTextLabel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -289.0
offset_top = 85.0
offset_bottom = 125.0
grow_horizontal = 0
theme_override_fonts/normal_font = ExtResource("5_ksla3")
text = "Collected Shards:"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_lo118")

[node name="WalkSoundComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_bee8u")]
player = NodePath("WalkPlayer")

[node name="WalkPlayer" type="AudioStreamPlayer3D" parent="WalkSoundComponent"]
stream = ExtResource("6_2hs0m")
volume_db = -40.0

[node name="DashSoundComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_bee8u")]
player = NodePath("DashPlayer")
min_pitch = 0.6
max_pitch = 0.6
min_volume = 80.0
max_volume = 80.0

[node name="DashPlayer" type="AudioStreamPlayer3D" parent="DashSoundComponent"]
stream = ExtResource("7_j8jve")
volume_db = 80.0
pitch_scale = 0.4

[node name="LandSoundComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_bee8u")]
player = NodePath("LandPlayer")

[node name="LandPlayer" type="AudioStreamPlayer3D" parent="LandSoundComponent"]
stream = ExtResource("8_k4nkw")

[node name="JumpSoundComponent" parent="." node_paths=PackedStringArray("player") instance=ExtResource("6_bee8u")]
player = NodePath("JumpPlayer")
min_pitch = 1.3
max_pitch = 1.3
min_volume = 1.0

[node name="JumpPlayer" type="AudioStreamPlayer3D" parent="JumpSoundComponent"]
stream = ExtResource("7_j8jve")
pitch_scale = 1.6

[connection signal="area_entered" from="PlayerHitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="health_changed" from="HealthComponent" to="SanityBar" method="_on_health_changed"]
[connection signal="health_depleted" from="HealthComponent" to="." method="die"]
[connection signal="invincibility_ended" from="HealthComponent" to="SanityBar" method="_on_invincibility_ended"]
[connection signal="invincibility_started" from="HealthComponent" to="SanityBar" method="_on_invincibility_started"]
